--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,2 +1,8 @@
 <h1>Courses#index</h1>
 <p>Find me in app/views/courses/index.html.erb</p>
+
+<ul>
+  <%= @courses.each do |course|  %>
+  <li><%= course.name %> - <%= course.unit.name %> - <%= course.unit.citie.name %></li>
+  <% end %>
+</ul>
