--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,4 +1,4 @@
 <h1>Courses#show</h1>
 <p>Find me in app/views/courses/show.html.erb</p>
 
-<%= course.name %> - <%= course.unit.name %> - <%= course.unit.citie.name %>
+<%= @course.name %> - <%= @course.unit.name %> - <%= @course.unit.citie.name %>
