--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,4 +1,69 @@
-<h1>Courses#show</h1>
-<p>Find me in app/views/courses/show.html.erb</p>
+<div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://source.unsplash.com/U0dBV_QeiYk/1096x274" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://source.unsplash.com/ewGMqs2tmJI/1096x274" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://source.unsplash.com/ggeZ9oyI-PE/1096x274" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-target="#carouselExampleFade" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-target="#carouselExampleFade" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </button>
+</div>
 
-<%= @course.name %> - <%= @course.unit.name %> - <%= @course.citie.name %> - <%= @course.institution.name %>
+  <h2 class="mt-3"><%= @course.name %></h2>
+<div class="d-flex justify-content-between">
+  <div>
+    <p><%= @course.institution.name %> - <%= @course.institution.initials %></p>
+    <p><%= @course.unit.name %> - <%= @course.citie.name %></p>
+  </div>
+  <button class="br-button secondary circle large mt-3 mt-sm-0 ml-sm-3" type="button" aria-label="Ícone ilustrativo">
+    <i class="fas fa-heart" aria-hidden="true"></i>
+  </button>
+</div>
+
+<div class="br-tab">
+  <nav class="tab-nav">
+    <ul>
+      <li class="tab-item">
+        <button type="button" data-panel="panel-1"><span class="name">Sobre</span></button>
+      </li>
+      <li class="tab-item">
+        <button type="button" data-panel="panel-2"><span class="name">Admissão</span></button>
+      </li>
+      <li class="tab-item active">
+        <button type="button" data-panel="panel-3"><span class="name">Campus</span></button>
+      </li>
+      <li class="tab-item">
+        <button type="button" data-panel="panel-4"><span class="name">Cidade</span></button>
+      </li>
+    </ul>
+  </nav>
+  <div class="tab-content">
+    <div class="tab-panel" id="panel-1">
+      <p>Painel Sobre</p>
+      <%# <%= render 'show/sobre', course: @course %>
+    </div>
+    <div class="tab-panel" id="panel-2">
+      <p>Painel Admissão</p>
+      <%# <%= render 'show/admissao', course: @course %>
+    </div>
+    <div class="tab-panel active" id="panel-3">
+      <p>Painel Campus</p>
+      <%# <%= render 'show/campus', course: @course %>
+    </div>
+    <div class="tab-panel" id="panel-4">
+      <p>Painel Cidade</p>
+      <%# <%= render 'show/cidade', course: @course %>
+    </div>
+  </div>
+</div>
