--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -2,7 +2,7 @@
 <p>Find me in app/views/courses/index.html.erb</p>
 
 <ul>
-  <%= @courses.each do |course|  %>
+  <% @courses.each do |course|  %>
   <li><%= course.name %> - <%= course.unit.name %> - <%= course.citie.name %> - <%= course.institution.name %></li>
   <% end %>
 </ul>
