--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -51,7 +51,7 @@
   <div class="tab-content">
     <div class="tab-panel" id="panel-1">
       <p>Painel Sobre</p>
-      <%# <%= render 'show/sobre', course: @course %>
+      <%= render 'courses/show/sobre', course: @course %>
     </div>
     <div class="tab-panel" id="panel-2">
       <p>Painel Admissão</p>
