--- a/app/views/courses/show/_admissao.html.erb
+++ b/app/views/courses/show/_admissao.html.erb
@@ -69,3 +69,6 @@
 <p><i class="fa fa-play" aria-hidden="true"></i> Referência:  <%= course.segments.last.sisu_edition %></p>
 
 <p>tabela com as notas de corte aqui</p>
+<%# SELECT *
+FROM course.segments
+GROUP BY sisu_edition %>
