--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -27,16 +27,16 @@
     <p><%= @course.unit.name %> - <%= @course.citie.name %></p>
   </div>
     <% if @favorite.present? %>
-      <%= button_to [@bookmark], method: :delete, data: { confirm: "Are you sure?" },
+      <%= button_to bookmark_path(@favorite), method: :delete,
                                 params: {course_id: params[:id]},
-                                # remote: true,
+                                remote: true,
                                 class: "br-button secondary circle large mt-3 mt-sm-0 ml-sm-3" do %>
       <i class="fas fa-heart" aria-hidden="true"></i>
       <% end %>
     <% else %>
       <%= button_to [@bookmark], method: :post,
                                 params: {course_id: params[:id]},
-                                # remote: true,
+                                remote: true,
                                 class: "br-button secondary circle large mt-3 mt-sm-0 ml-sm-3" do %>
       <i class="far fa-heart" aria-hidden="true"></i>
       <% end %>
