--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
 <div class="container-lg">
-  <div class="logo"><img src="https://cdn.dsgovserprodesign.estaleiro.serpro.gov.br/design-system/images/logo-negative.png" alt="Imagem"/></div>
+  <div class="logo"><img src="https://i.ibb.co/vxd7qvG/Bizu-logo.png" alt="Imagem"/></div>
   <div class="br-list horizontal" data-toggle="data-toggle" data-unique="data-unique">
     <div class="col-2"><a class="br-item header" href="javascript:void(0)">
         <div class="content text-down-01 text-bold text-uppercase">Categoria 1</div>
