--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
     <h1>Estudar em uma faculdade passa por muitas <strong>escolhas</strong> compare os cursos e <strong>decida para onde quer ir</strong>!</h1>
     <p>Veja as características de cada curso em nossa página</p>
     <p><span id="banner-typed-text"></span></p>
-    <a class="br-button primary" link_to: courses >Index</a>
+    <%= link_to "Buscar Cursos", courses_path, class:"br-button primary text-decoration-none" %>
   </div>
 </div>
 
