largura da página - correção

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
       <!-- Área de conteúdo -->
       <main id="main" class="d-flex flex-fill">
           <!-- Define a largura da página -->
-          <div class="container-lg d-flex">
+          <div class="container-lg">
               <div class="row">
                   <!-- Menu aqui -->
                   <div class="br-menu pt-md-3" id="main-navigation">
