--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -29,14 +29,14 @@
     <% if @favorite.present? %>
       <%= button_to bookmark_path(@favorite), method: :delete,
                                 params: {course_id: params[:id]},
-                                remote: true,
+                                # remote: true,
                                 class: "br-button secondary circle large mt-3 mt-sm-0 ml-sm-3" do %>
       <i class="fas fa-heart" aria-hidden="true"></i>
       <% end %>
     <% else %>
       <%= button_to [@bookmark], method: :post,
                                 params: {course_id: params[:id]},
-                                remote: true,
+                                # remote: true,
                                 class: "br-button secondary circle large mt-3 mt-sm-0 ml-sm-3" do %>
       <i class="far fa-heart" aria-hidden="true"></i>
       <% end %>
@@ -61,8 +61,7 @@
     </ul>
   </nav>
   <div class="tab-content active">
-    <div class="tab-panel" id="panel-1">
-      <p>Painel Sobre</p>
+    <div class="tab-panel active" id="panel-1">
       <%= render 'courses/show/sobre', course: @course %>
     </div>
     <div class="tab-panel" id="panel-2">
