--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,8 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+@import "components/bookmark_card";
+@import "components/bookmark_container";
 
 // Design System do Governo
 @import "@govbr/dsgov/dist/dsgov"
