--- a/app/views/courses/show/_admissao.html.erb
+++ b/app/views/courses/show/_admissao.html.erb
@@ -65,10 +65,10 @@
   </tr>
 </table>
 
-<h5>Últimos resultados do SiSU</h5>
+<!--<h5>Últimos resultados do SiSU</h5>
 <p><i class="fa fa-play" aria-hidden="true"></i> Referência:  <%= course.segments.last.sisu_edition %></p>
 
 <p>tabela com as notas de corte aqui</p>
-<%# SELECT *
+SELECT *
 FROM course.segments
-GROUP BY sisu_edition %>
+GROUP BY sisu_edition-->
