--- a/app/views/courses/show/_cidade.html.erb
+++ b/app/views/courses/show/_cidade.html.erb
@@ -1,7 +1,7 @@
 <h5><%= course.citie.name %> - <%= course.citie.state %></h5>
-<p><i class="fa fa-play" aria-hidden="true"></i> População: <%= course.citie.population %></p>
-<p><i class="fa fa-graduation-cap" aria-hidden="true"></i> IDH: <%= course.citie.idh %></p>
-<p><i class="fa fa-play" aria-hidden="true"></i> Passagem: R$<%= course.citie.bus_cost %></p>
+<p><i class="fas fa-user" aria-hidden="true"></i> População: <%= course.citie.population %></p>
+<p><i class="fas fa-chart-line" aria-hidden="true"></i> IDH: <%= course.citie.idh %></p>
+<p><i class="fas fa-bus" aria-hidden="true"></i> Passagem: R$<%= course.citie.bus_cost %></p>
 
 <span class="br-divider my-3"></span>
 
