--- a/app/views/courses/show/_campus.html.erb
+++ b/app/views/courses/show/_campus.html.erb
@@ -11,31 +11,31 @@
 <div class="d-flex">
   <% if course.unit.internet %>
     <div class="m-2">
-      <h6 class="text-center"><i class="fa fa-play" aria-hidden="true"></i></h6>
+      <h6 class="text-center"><i class="fas fa-wifi" aria-hidden="true"></i></h6>
       <p class="text-center">Internet Grátis</p>
     </div>
   <% end %>
   <% if course.unit.restaurant %>
     <div class="m-2">
-      <h6 class="text-center"><i class="fa fa-play" aria-hidden="true"></i></h6>
+      <h6 class="text-center"><i class="fas fa-utensils" aria-hidden="true"></i></h6>
       <p class="text-center">Restaurant Universitário</p>
     </div>
   <% end %>
   <% if course.unit.accomodation %>
     <div class="m-2">
-      <h6 class="text-center"><i class="fa fa-play" aria-hidden="true"></i></h6>
+      <h6 class="text-center"><i class="fas fa-hotel" aria-hidden="true"></i></h6>
       <p class="text-center">Alojamento</p>
     </div>
   <% end %>
   <% if course.unit.transport %>
     <div class="m-2">
-      <h6 class="text-center"><i class="fa fa-play" aria-hidden="true"></i></h6>
+      <h6 class="text-center"><i class="fas fa-bus" aria-hidden="true"></i></h6>
       <p class="text-center">Transporte</p>
     </div>
   <% end %>
   <% if course.unit.sports_playground %>
     <div class="my-2">
-      <h6 class="text-center"><i class="fa fa-play" aria-hidden="true"></i></h6>
+      <h6 class="text-center"><i class="far fa-futbol" aria-hidden="true"></i></h6>
       <p class="text-center">Área de Esportes</p>
     </div>
   <% end %>
@@ -59,5 +59,5 @@
   </div>
 </div>
 
-<span class="br-divider my-3"></span>
-<p>Mapa aqui?</p>
+<%# <span class="br-divider my-3"></span>
+<p>Mapa aqui?</p> %>
