--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -60,8 +60,8 @@
       </li>
     </ul>
   </nav>
-  <div class="tab-content active">
-    <div class="tab-panel" id="panel-1">
+  <div class="tab-content">
+    <div class="tab-panel active" id="panel-1">
       <p>Painel Sobre</p>
       <%= render 'courses/show/sobre', course: @course %>
     </div>
