--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -29,7 +29,7 @@
             <div class="card-footer">
               <div class="d-flex">
                 <div>
-                 <button class="br-button" type="button">Mais Informações</button>
+                <%= link_to "Mais Informações", course_path(course), class: "btn btn-primary" %>
                 </div>
                 <div class="ml-auto">
                   <button class="br-button circle" type="button" aria-label="Ícone ilustrativo">
