tentando corrigir o js do gov

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -11,7 +11,7 @@
     <div class="row">
       <% @courses.each do |course|  %>
         <div class="col-sm-7 col-md-5 col-lg-4">
-          <div class="br-card[data-expanded=on]">
+          <div class="br-card[data-expanded=on] mb-2 border">
             <div class="card-header">
               <div class="d-flex">
                 </span></span>
