--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -48,6 +48,7 @@
     </div>
   </div>
 </div>
+<%= javascript_pack_tag 'import_gov' %>
 
 <!-- Tags de Filtro -->
 <!-- <div class="br-tag interaction-select small">
