--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
         <%= render 'shared/shortcuts' %>
       </nav>
       <!-- Header aqui -->
-      <header class="br-header compact" id="header" data-sticky>
+      <header style="padding: 16px;" class="br-header compact" id="header" data-sticky>
         <%= render 'shared/header' %>
       </header>
       <!-- Área de conteúdo -->
@@ -38,7 +38,7 @@
                   <%= render 'shared/menu' %>
                   </div>
                   <!-- Coluna do conteúdo aqui -->
-                  <div class="col pt-3 pb-5">
+                  <div class="col">
                       <!-- Breadcrumbs aqui -->
                       <div class="br-breadcrumb">
                         <%= render 'shared/breadcrumbs' %>
