--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,9 +1,9 @@
   <div class="container-lg">
-    <div class="header-top">
+    <div style="display: flex;" class="header-top">
       <%= link_to root_path, class: "header-logo" do %>
         <img src="https://i.ibb.co/LJdnDNM/Bizu-logo-removebg-preview.png" alt="logo" style="max-height: 40px;"/>
-        <span style="display: block" class="br-divider vertical mx-half mx-sm-1"></span>
-        <div style="display: block; text-decoration: none;" class="header-sign"><strong>O melhor curso para você!</strong></div>
+        <span style="display: block;" class="br-divider vertical mx-half mx-sm-1"></span>
+        <div style="display: block;" class="header-sign"><strong>O melhor curso para você!</strong></div>
       <% end %>
       <div class="header-actions">
       <div>
