--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,50 +1,52 @@
-<div class="row">
-  <div class="col-3">
-    <%= render 'search' , courses: @courses %>
-  </div>
-  <div class="col-9">
-    <div class="row d-block">
-      <h2>Cursos ... </h2>
-      <p>Lista de cursos pelo critério escolhido</p>
+<div class="container">
+  <div class="row">
+    <div class="col-3">
+      <%= render 'search' , courses: @courses %>
     </div>
-    <br>
-    <div class="row">
-      <% @courses.each do |course|  %>
-        <div class="col-sm-7 col-md-5 col-lg-4">
-          <div class="br-card[data-expanded=on] mb-2 border">
-            <div class="card-header">
-              <div class="d-flex">
-                </span></span>
-                <div class="ml-3">
-                  <p class="h5 text-primary-default mb-0">
-                    <%= course.name %> - <%= course.institution.name %>
-                  </p>
-                  <span>Campus <%= course.unit.name %> - <%=course.shift%></span>
-                </div>
-                <div class="ml-auto">
+    <div class="col-9">
+      <div class="row d-block">
+        <h2>Cursos ... </h2>
+        <p>Lista de cursos pelo critério escolhido</p>
+      </div>
+      <br>
+      <div class="row">
+        <% @courses.each do |course|  %>
+          <div class="col-sm-7 col-md-5 col-lg-4">
+            <div class="br-card[data-expanded=on] mb-2 border">
+              <div class="card-header">
+                <div class="d-flex">
+                  </span></span>
+                  <div class="ml-3">
+                    <p class="h5 text-primary-default mb-0">
+                      <%= course.name %> - <%= course.institution.name %>
+                    </p>
+                    <span>Campus <%= course.unit.name %> - <%=course.shift%></span>
+                  </div>
+                  <div class="ml-auto">
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="card-content">
-            <p>O curso de <%= course.name %>, ministrado no campus de Campus <%=course.unit.name %> da <%=
-                    course.institution.name %> no turno <%=course.shift%>
-            </p>
-            </div> <!-- fim do card content-->
-            <div class="card-footer">
-              <div class="d-flex">
-                <div>
-                <%= link_to "Mais Informações", course_path(course), class: "btn btn-primary" %>
-                </div>
-                <div class="ml-auto">
-                  <button class="br-button circle" type="button" aria-label="Ícone ilustrativo">
-                    <i class="fas fa-heart" aria-hidden="true"></i>
-                  </button>
+              <div class="card-content">
+              <p>O curso de <%= course.name %>, ministrado no campus de Campus <%=course.unit.name %> da <%=
+                      course.institution.name %> no turno <%=course.shift%>
+              </p>
+              </div> <!-- fim do card content-->
+              <div class="card-footer">
+                <div class="d-flex">
+                  <div>
+                  <%= link_to "Mais Informações", course_path(course), class: "btn btn-primary" %>
+                  </div>
+                  <div class="ml-auto">
+                    <button class="br-button circle" type="button" aria-label="Ícone ilustrativo">
+                      <i class="fas fa-heart" aria-hidden="true"></i>
+                    </button>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
-      <% end %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
