--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
         <%# <%= render 'shared/shortcuts' %>
       <%# </nav> %>
       <!-- Header aqui -->
-      <header style="padding: 16px;" class="br-header compact" id="header" data-sticky>
+      <header style="padding: 16px; position: sticky; top: 0;" class="br-header compact" id="header">
         <%= render 'shared/header' %>
       </header>
       <!-- Área de conteúdo -->
