--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -5,7 +5,7 @@
         <span style="display: block;" class="br-divider vertical mx-half mx-sm-1"></span>
         <div style="display: block;" class="header-sign"><strong>O melhor curso para você!</strong></div>
       <% end %>
-      <div class="header-actions">
+      <div class="header-actions" style="margin: 0;">
       <div>
       </div>
         <div class="header-links dropdown">
