--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -33,6 +33,17 @@
           <div class="content d-none">Est ex deserunt</div></a><span class="br-divider d-md-none"></span>
       </div>
     </div>
+        <div class="col-2">
+      <div class="d-inline">
+      <div class="row align-items-end justify-content-between py-2">
+        <div class="social-network">
+          <p class="text-up-01 text-extra-bold text-uppercase">Redes Sociais</p><a class="mr-3" href=""><a><i class="fab fa-twitter"></i></a><a class="mr-3" href="javascript:void(0);"><a><i class="fab fa-facebook-square"></i></a><a class="mr-3" href="javascript:void(0);"><a><i class="fab fa-flickr"></i></a><a class="mr-3" href="javascript:void(0);"><a><i class="fab fa-instagram-square"></i></a>
+        </div>
+        <div class="col assigns text-right"><i class="fas fa-info-circle"></i><img class="ml-4 d-none" src="https://cdn.dsgovserprodesign.estaleiro.serpro.gov.br/design-system/images/logo-assign-negative.png" alt="Imagem"/>
+        </div>
+      </div>
+      </div>
+    </div>
     <div class="col-2"><a class="br-item header d-none" href="javascript:void(0)">
         <div class="content text-down-01 text-bold text-uppercase d-none">Categoria 4</div>
         <div class="support"><i class="fas fa-angle-up" aria-hidden="true"></i>
@@ -66,15 +77,7 @@
           <div class="content d-none">Adipisicing culpa et ad consequat</div></a><span class="br-divider d-md-none"></span>
       </div>
     </div>
-  </div>
-  <div class="d-none d-sm-block">
-    <div class="row align-items-end justify-content-between py-5">
-      <div class="col social-network">
-        <p class="text-up-01 text-extra-bold text-uppercase">Redes Sociais</p><a class="mr-3" href=""><a><i class="fab fa-twitter"></i></a><a class="mr-3" href="javascript:void(0);"><a><i class="fab fa-facebook-square"></i></a><a class="mr-3" href="javascript:void(0);"><a><i class="fab fa-flickr"></i></a><a class="mr-3" href="javascript:void(0);"><a><i class="fab fa-instagram-square"></i></a>
-      </div>
-      <div class="col assigns text-right"><i class="fas fa-info-circle"></i><img class="ml-4 d-none" src="https://cdn.dsgovserprodesign.estaleiro.serpro.gov.br/design-system/images/logo-assign-negative.png" alt="Imagem"/>
-      </div>
-    </div>
+
   </div>
 </div><span class="br-divider my-3"></span>
 <div class="container-lg">
